--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,2 @@
-Setup stuff: Tests, get the program running.
-Change the data files.
-Commit and save
-Do the exercises
+Do:
+    Improve TypeScript types for functions.
